# image_resizer

./: Cargo.toml  README.md
.github/workflows/: stable.yml
src/: main.rs
