[package]
name = "image-resizer"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = "4.4"
image = "0.24"
walkdir = "2.4"
indicatif = "0.17"
rayon = "1.8"

# Optional dependencies for extended format support
# webp = "0.2"
# mozjpeg = "0.10"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[target.x86_64-pc-windows-msvc]
rustflags = ["-Ctarget-feature=+crt-static"]
[target.x86_64-pc-windows-gnu]
rustflags = ["-Ctarget-feature=+crt-static","-Clink-arg=-static"]
[target.i686-pc-windows-msvc]
rustflags = ["-Ctarget-feature=+crt-static"]
[target.wasm32-unknown-unknown]
default = ["wasm"]
[target.x86_64-unknown-linux-gnu]
rustflags = ["-Ctarget-feature=+crt-static"]
[target.x86_64-unknown-linux-musl]
rustflags = ["-Ctarget-feature=+crt-static"]
[target.x86_64-apple-darwin]
rustflags = ["-Ctarget-feature=+crt-static"]

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
#strip = true        # Strip symbols from binary*
